tests/snapshots/snapshot__fixtures@j03__datastep_char_fns.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/j03/datastep_char_fns.sas
---
==== LOG ====

1     data work.charfns;
2       length s $40 tabstr $3;
3       length compbl_collapse $16 compbl_edges $16 compbl_tab $16 repeat_e $3;
4       s = 'She sells seashells? Yes, she does.';
5       tabstr = 'a	b';
6       tab = substr(tabstr, 2, 1);
7     
8       find_abc_a   = find('abc', 'a');
9       find_start22 = find(s, 'she', 22);
10      find_start5  = find('hello world', 'o', 5);
11    
12      compbl_collapse = compbl('125 E  Main St');
13      compbl_edges    = compbl('  hello world  ');
14      compbl_tab      = compbl('hello  ' || tab || '  world');
15    
16      strip_spaces = '*' || strip('   hello   ') || '*';
17      strip_tab    = '*' || strip(tab || 'hello' || tab) || '*';
18    
19      cats_mix  = cats(' a ', tab || 'b' || tab);
20      catx_mix  = catx('-', ' a ', tab || 'b' || tab);
21    
22      repeat_e     = repeat('é', 3);
23      /* Plafond en CARACTÈRES : 32 767 caractères de « é » (2 octets chacun),
24       * soit 65 534 octets — l'ancien plafond octet donnait 16 383 caractères. */
25      repeat_chars = length(repeat('é', 1e9));
26    run;
NOTE: The data set WORK.CHARFNS has 1 observations and 15 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

27    title "J03-P6 fonctions caractères — doc lefunctionsref";

28    proc print data=work.charfns;
29    run;
NOTE: There were 1 observations read from the data set WORK.CHARFNS.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

==== LISTING ====
                        J03-P6 fonctions caractères — doc lefunctionsref

Obs    s                                      tabstr    compbl_collapse    compbl_edges    compbl_tab     repeat_e    tab    find_abc_a    find_start22    find_start5    strip_spaces    strip_tab    cats_mix    catx_mix    repeat_chars

  1    She sells seashells? Yes, she does.    a	b       125 E Main St       hello world    hello world    ééé                         1              27              5    *hello*         *hello*      ab          a-b                32767

==== EXIT 0 ====
