tests/snapshots/snapshot__fixtures@j03__datastep_update_nomissingcheck.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/j03/datastep_update_nomissingcheck.sas
---
==== LOG ====

1     data work.master;
2       length common $1 animal $6 plant $9;
3       input common animal plant;
4       if common = 'a' then plant = '';
5       datalines;
6     a Ant Apple
7     c Cat Coconut
8     d Dog Dewberry
9     e Eagle Eggplant
10    f Frog Fig
11    ;
12    run;
NOTE: The data set WORK.MASTER has 5 observations and 3 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

13    data work.minerals;
14      length common $1 plant $9 mineral $9;
15      input common plant mineral;
16      if common = 'e' then call missing(plant, mineral);
17      if common = 'c' then mineral = .;
18      if common = 'f' then mineral = .;
19      datalines;
20    a Apricot Amethyst
21    b Barley Beryl
22    c Cactus Quartz
23    e Escarole Topaz
24    f Fennel Quartz
25    g Grape Garnet
26    ;
27    run;
NOTE: Numeric values have been converted to character values.
NOTE: The data set WORK.MINERALS has 6 observations and 3 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

28    data work.master3;
29      update work.master work.minerals(updatemode=nomissingcheck) key=common;
30      by common;
31    run;
NOTE: There were 5 observations read from the data set WORK.MASTER.
NOTE: There were 6 observations read from the data set WORK.MINERALS.
NOTE: The data set WORK.MASTER3 has 7 observations and 4 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

32    title "J03-P6 UPDATE NOMISSINGCHECK — doc LEPG 21.32";

33    proc print data=work.master3;
34    run;
NOTE: There were 7 observations read from the data set WORK.MASTER3.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

==== LISTING ====
                         J03-P6 UPDATE NOMISSINGCHECK — doc LEPG 21.32

                        Obs    common    animal    plant       mineral

                          1    a         Ant       Apricot     Amethyst
                          2    b                   Barley      Beryl
                          3    c         Cat       Cactus
                          4    d         Dog       Dewberry
                          5    e         Eagle
                          6    f         Frog      Fennel
                          7    g                   Grape       Garnet

==== EXIT 0 ====
